@@ -19,6 +19,7 @@ You will need
 * Type-conv
 * Camomile >= 0.7
 * Sexplib
+* Bin-prot
 * GNU Make
 
 To install the full version of OCaml Batteries Included, execute
