@@ -297,7 +297,7 @@ let is_empty s = length s = 0
 
 let compare_without_case s1 s2 = compare (String.lowercase s1) (String.lowercase s2)
 
-
+let print = IO.nwrite
 
 
 module Cap =
