@@ -339,7 +339,9 @@ val compare_without_case: t -> t -> int
 val t_of_sexp : Sexplib.Sexp.t -> t
 val sexp_of_t : t -> Sexplib.Sexp.t
 
+(** {7 Printing}*)
 
+val print: 'a IO.output -> string -> unit
 
 (**/**)
 
