@@ -1,3 +1,15 @@
+10/12/2008 David Teller <David.Teller@univ-orleans.fr>:
+	* IO.ml: removed dependency on [ExtString]
+	* IO.ml: [string_enum] added
+	* IO.ml: [chars_of] now uses [string_enum]
+	* IO.ml: [output_enum] now uses [string_enum]
+	* extUTF8.ml: removed dependency on [ExtString]
+	* extUTF8.ml: [string_splice] added
+	* extUTF8.ml: 
+	* extString.ml*: [print] added
+	* extList.ml: changed default values of optional arguments of [print]
+	* extArray.ml: changed default values of optional arguments of [print]
+	
 10/11/2008 David Teller <David.Teller@univ-orleans.fr>:
 	* extInt.ml*, extInt32.ml*, extInt64.ml*, extBig_int.ml*: [( -- )], [( --- )] added
 	* extInt32.ml, extInt64.ml, extNativeint.mli: [type t] moved upwards
